--- a/src/App.css
+++ b/src/App.css
@@ -23,3 +23,20 @@
 .hit {
     background-color: green;
 }
+
+.alert {
+    position: fixed;
+    z-index: 99;
+    height: auto;
+    /* width: 70%; */
+    max-width: 1000px;
+    min-width: 350px;
+    background-color: white;
+    top: 15%;
+    left: 50%;
+    transform: translateX(-50%);
+    box-shadow: 5px 10px 18px #888888;
+    text-align: center;
+    padding: 2vw;
+    border-radius: 5px;
+}
