--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,32 @@
     padding: 0;
 }
 
-.board {
+.center-text {
+    text-align: center;
+}
+
+.line-height {
+    line-height: 1.6;
+}
+
+button {
+    border: none;
+    border-radius: 5%;
+    display: block;
+    margin: 0.5rem auto;
+    padding: 0.5rem;
+    background-color: pink;
+    font-weight: bold;
+}
+
+button:hover {
+    cursor: pointer;
+}
+
+input,
+select {
+    margin: 0.5rem;
+    padding: 0.5rem;
 }
 
 .row {
@@ -39,4 +64,51 @@
     text-align: center;
     padding: 2vw;
     border-radius: 5px;
+}
+
+.addShips {
+    display: flex;
+    flex-direction: column;
+}
+
+.addShips h5 {
+    font-size: medium;
+}
+
+.addShipsForm {
+    margin: auto;
+    width: 95%;
+}
+
+.addShip {
+    display: flex;
+    flex-direction: column;
+}
+
+.boards {
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+}
+
+.board {
+    width: fit-content;
+    margin: auto;
+}
+
+.name {
+}
+
+@media only screen and (min-width: 768px) {
+    .addShipsForm {
+        width: fit-content;
+    }
+
+    .addShip {
+        flex-direction: row;
+    }
+
+    .boards {
+        flex-direction: row;
+    }
 }
